{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 192,
  "lineage": "f0c46166-a540-8562-6784-81dee8052348",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-00725da5357d986e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00725da5357d986e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-023095a31acc98ed7"
              }
            ],
            "primary_network_interface_id": "eni-023095a31acc98ed7",
            "private_dns": "ip-172-31-43-190.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.190",
            "public_dns": "ec2-3-81-94-250.compute-1.amazonaws.com",
            "public_ip": "3.81.94.250",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06643b79a5dfc3096",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_client_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742b30c8ccad7c19",
            "tags": {
              "Name": "Client-Direct"
            },
            "tags_all": {
              "Name": "Client-Direct"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d17a95ce26dfa756"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-00725da5357d986e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_instance.redis",
            "aws_instance.worker",
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-038085c36dc39d8b5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038085c36dc39d8b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09c0f5b4e0c336e2d"
              }
            ],
            "primary_network_interface_id": "eni-09c0f5b4e0c336e2d",
            "private_dns": "ip-172-31-76-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.76.249",
            "public_dns": "ec2-44-200-122-63.compute-1.amazonaws.com",
            "public_ip": "44.200.122.63",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ae3242680b75a6db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_nginx_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f91be706206b620",
            "tags": {
              "Name": "NGINX-Balancer"
            },
            "tags_all": {
              "Name": "NGINX-Balancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0a41cd6ebc9dbec20"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-038085c36dc39d8b5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.redis",
            "aws_instance.worker",
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0a3589ff220a44080",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3589ff220a44080",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04dee54f44ba80d47"
              }
            ],
            "primary_network_interface_id": "eni-04dee54f44ba80d47",
            "private_dns": "ip-172-31-32-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.104",
            "public_dns": "ec2-54-80-167-102.compute-1.amazonaws.com",
            "public_ip": "54.80.167.102",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b675d02df903955",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_redis_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742b30c8ccad7c19",
            "tags": {
              "Name": "Redis-Direct"
            },
            "tags_all": {
              "Name": "Redis-Direct"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd8bdc20bc570ae4"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0a3589ff220a44080",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-00c90933447b5bd03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c90933447b5bd03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-008495ec4d80d5f6d"
              }
            ],
            "primary_network_interface_id": "eni-008495ec4d80d5f6d",
            "private_dns": "ip-172-31-32-79.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.79",
            "public_dns": "ec2-54-172-234-48.compute-1.amazonaws.com",
            "public_ip": "54.172.234.48",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0715d8ca79ddd83bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_worker_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742b30c8ccad7c19",
            "tags": {
              "Name": "Worker-Direct-1"
            },
            "tags_all": {
              "Name": "Worker-Direct-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089d2147e043e4511"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-00c90933447b5bd03",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.redis",
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-021cf7a9f51b45bea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021cf7a9f51b45bea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e8505cfe402a8059"
              }
            ],
            "primary_network_interface_id": "eni-0e8505cfe402a8059",
            "private_dns": "ip-172-31-43-217.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.217",
            "public_dns": "ec2-32-198-120-142.compute-1.amazonaws.com",
            "public_ip": "32.198.120.142",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e46a9c526a2653f0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_worker_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742b30c8ccad7c19",
            "tags": {
              "Name": "Worker-Direct-2"
            },
            "tags_all": {
              "Name": "Worker-Direct-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089d2147e043e4511"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-021cf7a9f51b45bea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.redis",
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00fa360e28f425da0",
            "arn": "arn:aws:ec2:us-east-1:344602101473:instance/i-0c04b854ae6773dea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c04b854ae6773dea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-rabbitmq-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00542baea470ff983"
              }
            ],
            "primary_network_interface_id": "eni-00542baea470ff983",
            "private_dns": "ip-172-31-41-71.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.71",
            "public_dns": "ec2-100-24-1-89.compute-1.amazonaws.com",
            "public_ip": "100.24.1.89",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d37baedcd5e8ec81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "direct_worker_sg_v2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0742b30c8ccad7c19",
            "tags": {
              "Name": "Worker-Direct-3"
            },
            "tags_all": {
              "Name": "Worker-Direct-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089d2147e043e4511"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "i-0c04b854ae6773dea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.redis",
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.redis_sg",
            "aws_security_group.worker_sg",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "client_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0d17a95ce26dfa756",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d17a95ce26dfa756",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "direct_client_sg_v2",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0d17a95ce26dfa756",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0a41cd6ebc9dbec20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a41cd6ebc9dbec20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "direct_nginx_sg_v2",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0a41cd6ebc9dbec20",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-0dd8bdc20bc570ae4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd8bdc20bc570ae4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089d2147e043e4511",
                  "sg-0d17a95ce26dfa756"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "direct_redis_sg_v2",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-0dd8bdc20bc570ae4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.client_sg",
            "aws_security_group.nginx_sg",
            "aws_security_group.worker_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344602101473:security-group/sg-089d2147e043e4511",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089d2147e043e4511",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a41cd6ebc9dbec20"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "direct_worker_sg_v2",
            "name_prefix": "",
            "owner_id": "344602101473",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8742fafb6f175e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "344602101473",
            "id": "sg-089d2147e043e4511",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.nginx_sg"
          ]
        }
      ]
    }
  ]
}